--- a/src/app/properties/property-editor/property-editor.component.html
+++ b/src/app/properties/property-editor/property-editor.component.html
@@ -1,11 +1,11 @@
 <div class="row">
   <div class="col-md-7 pr-0" >
-    <input class="form-control" placeholder="key" [(ngModel)]="propertyKey"/>
+    <input class="form-control" placeholder="add a new property" (ngModelChange)="onInputChanged($event)" (keyup)="onKeyUp($event)" [(ngModel)]="propertyKey"/>
   </div >
   <div class="col-md-4 pr-0">
     <input class="form-control" placeholder="value" [(ngModel)]="propertyValue"/>
   </div >
   <div class="col-md-1" >
-    <button class="btn btn-success form-control" (click)="onPropertyTyped()">Clear</button>
+    <button class="btn btn-success form-control" (click)="onClear()">Clear</button>
   </div >
 </div>
