--- a/src/app/properties/properties.component.html
+++ b/src/app/properties/properties.component.html
@@ -1,28 +1,35 @@
-<table class="table table-striped table-light">
-  <thead>
-    <!-- Table header -->
-    <tr>
-      <th scope="col">
-        <div class="row">
-          <div class="col-md-7 sm-padding">Key</div>
-          <div class="col-md-4 sm-padding">Value</div>
-          <div class="col-md-1 sm-padding">Action</div>
-        </div>
-      </th>
-    </tr>
-  </thead>
-  <tbody>
-    <!-- Properties editor -->
-    <tr>
-      <td>
-        <app-property-editor (propertyInputChanged)="onInputChanged($event)" [propertySubject]="propertySubject"></app-property-editor>
-      </td>
-    </tr>
-    <!-- Properties list -->
-    <tr *ngFor="let property of properties" (click)="onPropertyPicked(property)" [ngClass]="property.getHighlightClass()">
-      <td>
-        <app-property-item [property]="property" ></app-property-item>
-      </td>
-    </tr>
-  </tbody>
-</table>
+<div class="row">
+  <div class="col-md-6">
+    <button class="btn btn-primary" (click)="getProperties()">Load</button>
+  </div>
+</div>
+<div class="row">
+  <table class="table table-striped table-light">
+    <thead>
+      <!-- Table header -->
+      <tr>
+        <th scope="col">
+          <div class="row">
+            <div class="col-md-7 sm-padding">Key</div>
+            <div class="col-md-4 sm-padding">Value</div>
+            <div class="col-md-1 sm-padding">Action</div>
+          </div>
+        </th>
+      </tr>
+    </thead>
+    <tbody>
+      <!-- Properties editor -->
+      <tr>
+        <td>
+          <app-property-editor (propertyInputChanged)="onInputChanged($event)" [propertySubject]="propertySubject"></app-property-editor>
+        </td>
+      </tr>
+      <!-- Properties list -->
+      <tr *ngFor="let property of properties" (click)="onPropertyPicked(property)" [ngClass]="property.getHighlightClass()">
+        <td>
+          <app-property-item [property]="property" ></app-property-item>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
