--- a/src/app/properties/property-item/property-item.component.html
+++ b/src/app/properties/property-item/property-item.component.html
@@ -1,4 +1,4 @@
-<div class="row" (onclick)="onClick()">
+<div class="row" >
   <div class="col-md-7 align-bottom" >
     {{ property.key }}
   </div>
@@ -6,8 +6,8 @@
     {{ property.value }}
   </div>
   <div class="col-md-1" >
-    <button class="btn-sm btn-danger form-control">
-      <img src="assets\ic_delete.png" width="16" />
+    <button class="btn-sm btn-danger form-control" *ngIf="isActive()">
+      <img src="assets\ic_delete.png" width="20" />
     </button>
   </div>
 </div>
