--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,30 @@
-<nav class="navbar navbar-default navi">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#" style="color: #fff">Properties editor</a>
-    </div>
-
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom border-secondary">
+  <a class="navbar-brand" href="#" style="color: #fff">Properties editor</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ml-auto">
+      <!-- Download Dropdown -->
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">Download</a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="#">.properties</a>
+          <a class="dropdown-item" href="#">.json</a>
+          <a class="dropdown-item" href="#">.yaml</a>
+        </div>
+      </li>
+      <!-- Export Dropdown -->
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Export</a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="#">audit.log</a>
+          <a class="dropdown-item" href="#">application.log</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Discard</a>
+      </li>
+    </ul>
   </div>
 </nav>
