--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,4 @@
 <app-header></app-header>
 <div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <app-properties></app-properties>
-    </div>
-  </div>
+  <router-outlet></router-outlet>
 </div>
