--- a/src/app/properties/property-item/property-item.component.html
+++ b/src/app/properties/property-item/property-item.component.html
@@ -1,4 +1,4 @@
-<div class="row" >
+<div class="row sortable" >
   <div class="col-md-7 align-bottom" >
     {{ property.key }}
   </div>
@@ -7,7 +7,7 @@
   </div>
   <div class="col-md-1" >
     <button class="btn-sm btn-danger form-control" *ngIf="isActive()">
-      <img src="assets\ic_delete.png" width="20" />
+      <img src="assets\ic_delete.png" width="18" />
     </button>
   </div>
 </div>
