--- a/src/app/properties/properties.component.html
+++ b/src/app/properties/properties.component.html
@@ -1,9 +1,4 @@
 <div class="row">
-  <div class="col-md-6">
-    <button class="btn btn-primary" (click)="downloadProperties()">Load</button>
-  </div>
-</div>
-<div class="row">
   <table class="table table-striped table-light">
     <thead>
       <!-- Table header -->
@@ -21,14 +16,14 @@
       <!-- Properties editor -->
       <tr>
         <td>
-          <app-property-editor (propertyInputChanged)="onInputChanged($event)" [propertySubject]="propertySubject"></app-property-editor>
+          <app-property-editor (propertyInputChanged)="onInputChanged($event)" (propertyApproved)="onPropertyApproved($event)" [propertySubject]="propertySubject"></app-property-editor>
         </td>
       </tr>
       <!-- Properties list -->
-      <tr *ngFor="let property of this.getPropertiesList()" (click)="onPropertyPicked(property)" [ngClass]="property.getHighlightClass()">
-        <td>
-          <app-property-item [property]="property"></app-property-item>
-        </td>
+      <tr *ngFor="let property of this.getPropertiesList()"
+          [app-property-item]="property"
+          (click)="onPropertyPicked(property)"
+          (deleteEvent)="onPropertyDelete(property)">
       </tr>
     </tbody>
   </table>
