--- a/src/app/properties/property-editor/property-editor.component.html
+++ b/src/app/properties/property-editor/property-editor.component.html
@@ -3,7 +3,7 @@
     <input class="form-control" placeholder="add a new property" (ngModelChange)="onInputChanged($event)" (keyup)="onKeyUp($event)" [(ngModel)]="propertyKey"/>
   </div >
   <div class="col-md-4 pr-0">
-    <input class="form-control" placeholder="value" [(ngModel)]="propertyValue"/>
+    <input class="form-control" placeholder="value" (keyup)="onKeyUp($event)" [(ngModel)]="propertyValue"/>
   </div >
   <div class="col-md-1" >
     <button class="btn btn-success form-control" (click)="onClear()">Clear</button>
