--- a/src/app/upload/upload.component.html
+++ b/src/app/upload/upload.component.html
@@ -24,7 +24,7 @@
           </div>
           <!-- Upload Button -->
           <div class="row">
-            <button class="btn btn-block btn-primary" [disabled]="!hasFile()" (click)="onUploadFile()" >Upload</button>
+            <button class="btn btn-block btn-info" [disabled]="!hasFile()" (click)="onUploadFile()" >Upload</button>
           </div>
         </div>
         </div>
