--- a/src/app/properties/properties.component.html
+++ b/src/app/properties/properties.component.html
@@ -1,30 +1,65 @@
 <div class="row">
-  <table class="table table-striped table-light">
-    <thead>
-      <!-- Table header -->
-      <tr>
-        <th scope="col">
-          <div class="row">
-            <div class="col-md-7 sm-padding">Key</div>
-            <div class="col-md-4 sm-padding">Value</div>
-            <div class="col-md-1 sm-padding">Action</div>
-          </div>
-        </th>
-      </tr>
-    </thead>
-    <tbody>
-      <!-- Properties editor -->
-      <tr>
-        <td>
-          <app-property-editor (propertyInputChanged)="onInputChanged($event)" (propertyApproved)="onPropertyApproved($event)" [propertySubject]="propertySubject"></app-property-editor>
-        </td>
-      </tr>
-      <!-- Properties list -->
-      <tr *ngFor="let property of this.getPropertiesList()"
-          [app-property-item]="property"
-          (click)="onPropertyPicked(property)"
-          (deleteEvent)="onPropertyDelete(property)">
-      </tr>
-    </tbody>
-  </table>
+  <div class="col-md-12 my-md-4">
+    <div class="border-bottom rounded bg-info border-secondary text-white text-center p-md-2"><strong>Properties</strong></div>
+    <div class="p-md-2">
+      <table class="table table-hover table-striped table-light">
+        <thead>
+        <!-- Table header -->
+        <tr>
+          <th scope="col">
+            <div class="row">
+              <div class="col-md-7 sm-padding">Key</div>
+              <div class="col-md-4 sm-padding">Value</div>
+              <div class="col-md-1 sm-padding">Action</div>
+            </div>
+          </th>
+        </tr>
+        </thead>
+        <tbody>
+        <!-- Properties editor -->
+        <tr>
+          <td>
+            <app-property-editor
+              (propertyKeyInputChanged)="onInputKeyChanged($event)"
+              (propertyValueInputChanged)="onInputValueChanged($event)"
+              (propertyApproved)="onPropertyApproved($event)"
+              [isValueChanged]="isValueChanged"
+              [propertySubject]="propertySubject">
+            </app-property-editor>
+          </td>
+        </tr>
+        <!-- Properties list -->
+        <tr *ngFor="let property of this.getPropertiesList()"
+            [app-property-item]="property"
+            (click)="onPropertyPicked(property)"
+            (deleteEvent)="onPropertyDelete(property)">
+        </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <div class="col-md-12 my-md-4" *ngIf="this.hasAuditLogs()">
+    <div class="border-bottom rounded bg-info border-secondary text-white text-center p-md-2"><strong>Audit Logs</strong></div>
+    <div class="p-md-2">
+      <table class="table table-hover table-striped table-light">
+        <thead>
+        <!-- Table header -->
+        <tr>
+          <th scope="col">
+            <div class="row">
+              <div class="col-md-2 sm-padding text-center">Timestamp</div>
+              <div class="col-md-10 sm-padding text-center">Log</div>
+            </div>
+          </th>
+        </tr>
+        </thead>
+        <!-- Audit Logs List -->
+        <tr *ngFor="let log of this.getAuditLogsList()">
+          <td>{{ log }}</td>
+        </tr>
+        <tbody>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
